Fix work transition reference, Fix navbar z-index issue

--- a/app/styles/components/navbar.scss
+++ b/app/styles/components/navbar.scss
@@ -5,6 +5,7 @@
   justify-content: space-between;
   padding: 30px;
   width: 100%;
+  z-index: 2;
 
   .logo{
     @include runaway-logotype-round--black;
